rubocop fixes to rpsls.rb

--- a/lesson_2/rpsls/rpsls_messages.yml
+++ b/lesson_2/rpsls/rpsls_messages.yml
@@ -16,7 +16,7 @@ en:
 
   play_again?: "Would you like to play again? (Y/N) - Enter 'Y' for yes, 'N' for no."
 
-  thanks: "Thanks for playing. - Live long and prosper."
+  thanks: "Thanks for playing. Live long and prosper."
 
 
 
